--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "email": "luke@mewt.eu"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^8"
