--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,11 @@
     },
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^8",
+        "squizlabs/php_codesniffer": "^3.4"
     },
     "scripts": {
-        "test": "./vendor/bin/phpunit"
+        "test": "./vendor/bin/phpunit",
+        "codesniff": "./vendor/bin/phpcs --standard=PSR2 src"
     }
 }
