--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^8",
-        "squizlabs/php_codesniffer": "^3.4"
+        "squizlabs/php_codesniffer": "^3.4",
+        "phpstan/phpstan": "^0.11.12"
     },
     "scripts": {
         "test": "./vendor/bin/phpunit",
-        "codesniff": "./vendor/bin/phpcs --standard=PSR2 src"
+        "codesniff": "./vendor/bin/phpcs --standard=PSR2 src",
+        "stan": "./vendor/bin/phpstan analyse --level 7 src"
     }
 }
